--- a/src/patternfly/components/Accordion/accordion.scss
+++ b/src/patternfly/components/Accordion/accordion.scss
@@ -264,6 +264,6 @@
 // stylelint-disable no-invalid-position-at-import-rule
 @import "themes/dark/accordion";
 
-@include pf-v5-theme-dark {
+@include pf-v5-root-vars('dark') {
   @include pf-v5-theme-dark-accordion;
 }
