--- a/src/patternfly/components/CodeEditor/themes/dark/code-editor.scss
+++ b/src/patternfly/components/CodeEditor/themes/dark/code-editor.scss
@@ -1,6 +1,11 @@
 @import "../../../../sass-utilities/themes/dark/all";
 
 @mixin pf-v5-theme-dark-code-editor() {
+  .#{$code-editor} {
+    --#{$code-editor}--m-read-only__main--Color: var(--#{$pf-global}--disabled-color--300);
+    --#{$code-editor}--m-read-only__main--BackgroundColor: var(--#{$pf-global}--disabled-color--200);
+  }
+
   .#{$code-editor}__controls {
     > * + * {
       border-left: 1px solid var(--#{$pf-global}--palette--black-700);
