--- a/src/patternfly/components/FormControl/themes/dark/form-control.scss
+++ b/src/patternfly/components/FormControl/themes/dark/form-control.scss
@@ -7,19 +7,18 @@
     --#{$form-control}--BorderBottomColor: var(--#{$pf-global}--BorderColor--400);
     --#{$form-control}--BorderLeftColor: transparent;
     --#{$form-control}--BackgroundColor: var(--#{$pf-global}--BackgroundColor--400);
-    --#{$form-control}--disabled--Color: var(--#{$pf-global}--disabled-color--300);
-    --#{$form-control}--disabled--BackgroundColor: var(--#{$pf-global}--disabled-color--200);
-    --#{$form-control}--readonly--BackgroundColor: var(--#{$pf-global}--disabled-color--200);
+    --#{$form-control}--m-disabled--Color: var(--#{$pf-global}--disabled-color--300);
+    --#{$form-control}--m-disabled--BackgroundColor: var(--#{$pf-global}--disabled-color--200);
+    --#{$form-control}--m-readonly--BackgroundColor: var(--#{$pf-global}--disabled-color--200);
+    --#{$form-control}--m-readonly--hover--BorderBottomColor: var(--#{$pf-global}--BorderColor--400);
+    --#{$form-control}--m-readonly--focus--BorderBottomColor:var(--#{$pf-global}--BorderColor--400);
+    --#{$form-control}--m-disabled__toggle-icon--Color: var(--#{$pf-global}--disabled-color--300);
 
     color: var(--#{$pf-global}--Color--100);
 
     // chrome's calendar icon for type="date"
     &::-webkit-calendar-picker-indicator {
       filter: #{"invert(1)"};
-    }
-
-    &.pf-m-readonly {
-      border-bottom-color: var(--#{$pf-global}--palette--black-700); // should be a var?
     }
   }
 }
