--- a/src/patternfly/components/Toolbar/toolbar-item-search-filter.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-item-search-filter.hbs
@@ -1,6 +1,6 @@
 {{#> toolbar-item toolbar-item--modifier=(concat 'pf-m-search-filter ' toolbar-item-search-filter--modifier)}}
   {{#> input-group input-group--attribute=(concat 'aria-label="search filter" role="group"')}}
-    {{#> input-group-item input-group-item--IsFill=true}}
+    {{#> input-group-item}}
       {{#> select select--id=(concat toolbar--id '-select-name') select--width=(ternary toolbar-items-search-filter--width toolbar-items-search-filter--width '124px') select-toggle--icon="fas fa-filter"}}
         {{#if toolbar-items-search-filter--text}}
           {{{toolbar-items-search-filter--text}}}
@@ -9,11 +9,11 @@
         {{/if}}
       {{/select}}
     {{/input-group-item}}
-    {{#> input-group-item}}
+    {{#> input-group-item input-group-item--IsFill=true}}
       {{#if toolbar-items-search-filter--text}}
-        {{> text-input-group--search-input text-input-group--id="text-input-group-search-input-group" text-input-group-text-input--placeholder=(concat "Filter by " toolbar-items-search-filter--text) text-input-group--attribute='style="width: auto"'}}
+        {{> text-input-group--search-input text-input-group--id="text-input-group-search-input-group" text-input-group-text-input--placeholder=(concat "Filter by " toolbar-items-search-filter--text)}}
       {{else}}
-        {{> text-input-group--search-input text-input-group--id="text-input-group-search-input-group" text-input-group-text-input--placeholder="Filter by name" text-input-group--attribute='style="width: auto"'}}
+        {{> text-input-group--search-input text-input-group--id="text-input-group-search-input-group" text-input-group-text-input--placeholder="Filter by name"}}
       {{/if}}
     {{/input-group-item}}
   {{/input-group}}
